Read one answer about what arrives, for every question that asks
Three of the readers were routed and two were not. The branch denominator and
the signature's still asked the declaration-only reading, so a guard the guards
above it rule out kept its row: the model of #779 measured four arms where three
are owed. `Witness.ARunWentThrough` having no producer was the same fact said
another way — the thing that takes a proof back had not been moved either.

So a run through an arm is that witness, and it is what the fold answers. What
was `Effective` — a proof, minus the arms a row went through, beside the set that
were — is now one act over the one answer: `asRunWith` corrects the arms and says
which proofs the rows took back, both together because neither can be recovered
from the other afterwards. `ArmReachability`, `Adequacy.Reachable`,
`Adequacy.Reached`, `Adequacy.Effective` and `GuardEdge.provenDisjoint` are gone,
and with them the edge list nothing was left to read.

Two more from the review, both real:

An `unreachable` the author wrote is not a branch to warn about. It is the arm
whose cases the rules refuse — exactly where `Claims` answers `Confirmed` — so
the author who does the right thing was told to take it out, which the spec
paragraph in this PR says the opposite of. The warning is now about arms a run
could have been recorded in, which is the rule the denominator counts by.

A `Match`'s children are its scrutinee as well as its arm bodies, so handing the
node to the generic walk read the scrutinee twice, the second time from under a
fork — and a claim that had been refuted came back as one nothing settled. The
arms are written out now, and each is entered through the engine with what its
case guarantees, which an arm's own guards had no way to read before.

Measured. Full reactor green under `-Plint`, compiler 5093. The example corpus
moves by exactly two arms: `Int.clamp` in crm and `Int.abs` in joboffer, each a
standard-library fork spliced into a ca